Layout 4 font changed to Consolas (non-kerning). Alignment fixes to all fields with field titles given 40% of section and data with 60%. Brackets added to subrecord titles to show heirarchy.

--- a/Demos/data/styles.css
+++ b/Demos/data/styles.css
@@ -1,5 +1,5 @@
 ﻿.ax_default {
-  font-family:'Arial';
+  font-family:'Consolas';
   font-weight:400;
   font-style:normal;
   font-size:13px;
@@ -37,41 +37,41 @@
   color:#169BD5;
 }
 .heading_1 {
-  font-family:'Arial';
+  font-family:'Consolas';
   font-weight:bold;
   font-style:normal;
   font-size:32px;
   text-align:left;
 }
 .heading_2 {
-  font-family:'Arial';
+  font-family:'Consolas';
   font-weight:bold;
   font-style:normal;
   font-size:24px;
   text-align:left;
 }
 .heading_3 {
-  font-family:'Arial';
+  font-family:'Consolas';
   font-weight:bold;
   font-style:normal;
   font-size:18px;
   text-align:left;
 }
 .heading_4 {
-  font-family:'Arial';
+  font-family:'Consolas';
   font-weight:bold;
   font-style:normal;
   font-size:14px;
   text-align:left;
 }
 .heading_5 {
-  font-family:'Arial';
+  font-family:'Consolas';
   font-weight:bold;
   font-style:normal;
   text-align:left;
 }
 .heading_6 {
-  font-family:'Arial';
+  font-family:'Consolas';
   font-weight:bold;
   font-style:normal;
   font-size:10px;
@@ -129,7 +129,7 @@
   text-align:left;
 }
 .heading_11 {
-  font-family:'Arial Bold', 'Arial';
+  font-family:'Consolas Bold', 'Consolas';
   font-weight:700;
   font-style:normal;
   font-size:32px;
@@ -165,7 +165,7 @@
   color:rgba(0, 0, 0, 0.866666666666667);
 }
 .title {
-  font-family:'Roboto Regular', 'Roboto';
+  font-family:'Consolas';
   font-weight:bold;
   font-style:normal;
   font-size:13px;
@@ -187,14 +187,14 @@
   color:rgba(0, 0, 0, 0.866666666666667);
 }
 .body_1 {
-  font-family:'Roboto Regular', 'Roboto';
+  font-family:'Consolas';
   font-weight:normal;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.866666666666667);
 }
 .caption {
-  font-family:'Roboto Regular', 'Roboto';
+  font-family:'Consolas';
   font-weight:400;
   font-style:normal;
   font-size:12px;
@@ -271,7 +271,7 @@
   text-align:left;
 }
 .hint_text {
-  font-family:'Roboto Regular', 'Roboto';
+  font-family:'Courier New';
   font-weight:400;
   font-style:normal;
   font-size:16px;
